# netbox-contract

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  UTILS.md  assignement_import.csv  contract.csv  contract_migration.py  index.html  mkdocs.yml  netbox-configuration.py  pyproject.toml  requirement.txt  ruff.toml  setup.py  sitemap.xml
.devcontainer/: .zshrc  Dockerfile-plugin_dev  README.md  devcontainer.json  docker-compose.override.yml  entrypoint-dev.sh  requirements-dev.txt
.devcontainer/configuration/: configuration.py  logging.py  plugins.py
.devcontainer/env/: netbox.env
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: lint-tests.yaml  mkdocs.yaml  python-publish.yml
accounting_dimensions/: index.html
api/: index.html
changelog/: index.html
contract/: index.html
contracts/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
contracts.egg-info/: PKG-INFO  SOURCES.txt
contracts/api/: serializers.py  urls.py  views.py
contracts/migrations/: 0001_initial.py  0001_v1.0.py  0002_remove_contract_content_type_and_more.py  0003_rename_contractinvoice_invoice_alter_invoice_options_and_more.py  0004_remove_contract_circuit_contract_circuit.py  0009_remove_contract_slug.py
contributing/: index.html
docs/: accounting_dimensions.md  api.md  contract.md  invoice.md  invoice_line.md
invoice/: index.html
invoice_line/: index.html
netbox_contract/: __init__.py  constants.py  eventtypes.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  search.py  tables.py  template_content.py  urls.py  views.py
netbox_contract/api/: serializers.py  urls.py  views.py
netbox_contract/migrations/: 0001_initial.py  0002_alter_contract_circuit_and_more.py  0005_contract_accounting_dimensions_and_more.py  0006_alter_contract_circuit.py  0008_invoice_comments.py  0009_contract_external_reference.py  0010_invoice_contracts.py  0012_remove_invoice_contract.py  0015_contractassignement.py  0018_contract_external_party_object_id_and_more.py  0019_auto_20230924_1813.py  0020_alter_contract_external_party.py  0021_alter_contract_external_party.py  0022_alter_contract_internal_partie_alter_contract_parent.py  0024_remove_contract_external_party.py  (+17 more)
scripts/: netbox-contract.py
search/: search_index.json
testing/: configuration.py
tests/: test_netbox_contract.py
utils/: README.md  accounting_dimension_import.csv  contract_import.csv  contracts_import.csv  database_init.py  invoice_import.csv  invoice_line_import.csv  netbox-configuration-final.py  netbox-configuration.py  netbox.sql  requirements.txt  service_provider_import.csv
(+94 files in other folders)
