# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-contract"
version = "2.3.1"
authors = [
  { name="Marc Lebreuil", email="marc@famillelebreuil.net" },
]
description = "Contract management plugin for Netbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'python-dateutil',
    'drf_yasg',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mlebreuil/netbox-contract"
"Bug Tracker" = "https://github.com/mlebreuil/netbox-contract/issues"
